<resources>
    <string name="app_name">Журнал</string>
    <string name="hint_login">Войти</string>
    <string name="hint_password">Пароль</string>

    <string name="warning_fill">Обязательное поле</string>
    <string name="confirm_password">Подтвердить пароль</string>
    <string name="e_mail">Эл. почта</string>
    <string name="your_phone">Номер телефона</string>
    <string name="name_optional">Имя</string>
    <string name="surname_optional">Фамилия</string>

    <string name="list">Список</string>
    <string name="calendar">Календарь</string>
    <string name="online">Онлайн</string>
    <string name="offline">Оффлайн</string>
    <string name="notification">Вызвать уведомление</string>

    <string name="channel_name">calendar_notify</string>
    <string name="channel_description">calendar_notify_desc</string>

    <string name="splash_corners">SplashCorners</string>

    <string name="signin_text">Вход</string>
    <string name="email">Эл. почта</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="activity_link_signup">Нет аккаунта? <u>Зарегистрироваться</u></string>

    <string name="signup_text">Регистрация</string>
    <string name="user_name">Имя</string>
    <string name="activity_link_signin">Есть аккаунт? <u>Войти</u></string>
    <string name="share">Поделиться</string>
    <string name="registration_data">Дата:</string>
    <string name="languages">Преподаватель:</string>
    <string name="format">Оценка:</string>
    <string name="necessarily">Обязательно</string>
    <string name="login_exists">Логин уже занят</string>
</resources>